<resources>
    <string name="app_name">Sadboi App</string>
    <string name="sadboi_app_logo">sadboi_app_logo</string>
    <string name="homepage_text">
        Selamat datang di aplikasi SadBoi, disini Anda dapat mencurahkan isi hati Anda dan melihat keluh
        kesah orang lain. Tidak perlu cemas, semua pasti pernah merasakan SadBoi.
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_help">Help</string>
    <string name="menu_story_sadboi">Sadboi Story</string>
    <string name="menu_quote_sadboi">Sadboi Quote</string>
    <string name="menu_draft_story_sadboi">Draft Sadboi Story</string>
    <string name="action_language">Language</string>
    <string name="button_masuk_text">Start</string>
    <string name="see_quotes">See Quotes</string>
    <string name="saved_stories">See Saved Stories</string>
    <string name="saved_quotes">See Saved Quotes</string>
    <string name="see_stories">See Stories</string>
    <string name="quotes_app_bar">Quotes</string>
    <string name="stories_app_bar">Stories</string>
    <string name="share_text">Share</string>
    <string name="save_text">Save</string>
    <string name="no_story_text">No Story</string>
    <string name="saved_stories_text">Saved Stories</string>
    <string name="saved_quotes_text">Saved Quotes</string>
    <string name="no_quote_text">No quote</string>

</resources>