<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <!--Navbar Story Sadboi Menu-->
        <item
            android:id="@+id/nav_story"
            android:icon="@drawable/ic_menu_story_black"
            android:title="@string/menu_story_sadboi"/>

        <!--Navbar Draft Story Sadboi Menu-->
        <item
            android:id="@+id/nav_draft_story"
            android:icon="@drawable/ic_menu_draft_story_black"
            android:title="@string/menu_draft_story_sadboi"/>


        <!--Navbar Quote Sadboi Menu-->
        <item
            android:id="@+id/nav_quote"
            android:icon="@drawable/ic_menu_quote_black"
            android:title="@string/menu_quote_sadboi"/>

        <!--Navbar Help Menu-->
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help"/>
    </group>
</menu>